--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,6 @@
-transformers~=4.27.4
-datasets~=2.11.0
-torch~=2.0.0
-tensorflow~=2.12.0
-Pillow~=9.5.0
+transformers
+datasets
+torch
+tensorflow
+Pillow
+numpy
