update for eval printing contrastive loss & report

--- a/.gitignore
+++ b/.gitignore
@@ -135,3 +135,9 @@ ememe_emoroberta_cache
 
 cached_data_dev.pkl
 cached_data_train.pkl
+
+distribution.txt
+emotion_dist.csv
+model.ckpt
+record.json
+results.txt
